# Python

./: "Модуль_1_Практична_частина_ipynb".ipynb  "Модуль_2_Теоретична_частина_ipynb".ipynb  Модуль 1. Теоретична частина.ipynb  Модуль_2_Практична_частина_.ipynb  Модуль_3_Практична_частина_.ipynb  Модуль_3_Теоретична_частина.ipynb  Модуль_4_Практична_частина_.ipynb  Модуль_4_Теоретична_частина.ipynb  Модуль_5_Практична_частина_.ipynb  Модуль_5_Теоретична_частина.ipynb  Модуль_6_Практична_частина_.ipynb  Модуль_6_Теоретична_частина.ipynb
Module 10/: Assistant Bot with Classes.py
Module 11/: Assistant_Bot_with_Classes.py
Module 12/: Assistant_Bot_with_Classes.py
Module 9/: Assistant Bot.py
Module8/: Birthdays Next Week.py
WEB_DZ_10-main/: README.md  pyproject.toml
WEB_DZ_10-main/hw10_django/: manage.py
WEB_DZ_10-main/hw10_django/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
WEB_DZ_10-main/hw10_django/quotes/: forms.py  models.py  urls.py  utils.py  views.py
WEB_DZ_10-main/hw10_django/quotes/migrations/: 0001_initial.py
WEB_DZ_10-main/hw10_django/quotes/static/quotes/: style.css
WEB_DZ_10-main/hw10_django/quotes/templates/quotes/: add_quote.html  author_detail.html  base.html  edit_author.html  index.html  tag_quotes.html
WEB_DZ_10-main/hw10_django/quotes/templatetags/: extract_authors.py
WEB_DZ_10-main/hw10_django/users/: forms.py  urls.py  views.py
WEB_DZ_10-main/hw10_django/users/templates/users/: login.html  logout.html  register.html
WEB_DZ_10-main/hw10_django/utils/: insert_quotes_to_mongo.py  migration.py
WEB_DZ_11-main/: README.md  pyproject.toml
WEB_DZ_11-main/Lesson/: db.py  main.py  middlewares.py  models.py  sql_app.sqlite
WEB_DZ_11-main/consp/: main.py  pyproject.toml
WEB_DZ_11-main/consp/migrations/: env.py
WEB_DZ_11-main/consp/migrations/versions/: 1c327e794f49_init.py
WEB_DZ_11-main/consp/src/: schemas.py
WEB_DZ_11-main/consp/src/database/: models.py
WEB_DZ_11-main/consp/src/repository/: notes.py  tags.py
WEB_DZ_11-main/consp/src/routes/: tags.py
WEB_DZ_11-main/hw/: main.py  pyproject.toml
WEB_DZ_11-main/hw/src/config/: config.py
WEB_DZ_11-main/hw/src/entity/: models.py
WEB_DZ_11-main/hw/src/repository/: contacts.py
WEB_DZ_11-main/hw/src/routes/: contacts_api.py
WEB_DZ_11-main/hw/src/schemas/: contact_schemas.py
WEB_DZ_12-main/conspect/: main.py  pyproject.toml
WEB_DZ_12-main/conspect/src/database/: db.py
WEB_DZ_12-main/conspect/src/repository/: notes.py  tags.py  users.py
WEB_DZ_12-main/conspect/src/routes/: auth.py  notes.py
WEB_DZ_13-main/: README.md
WEB_DZ_13-main/django/: pyproject.toml  readme.md
WEB_DZ_13-main/django/notes/: manage.py
WEB_DZ_13-main/django/notes/noteapp/: forms.py  models.py  urls.py  views.py
WEB_DZ_13-main/django/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
WEB_DZ_13-main/django/notes/noteapp/templates/noteapp/: base.html  detail.html  index.html  note.html  temp.html
WEB_DZ_13-main/django/notes/notes/: settings.py  urls.py
WEB_DZ_13-main/django/notes/users/: forms.py  models.py  urls.py  views.py
WEB_DZ_13-main/django/notes/users/migrations/: 0001_initial.py
WEB_DZ_13-main/django/notes/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  signup.html
WEB_DZ_14-main/: README.md  docker-compose.yml  main.py  pyproject.toml  test.db
WEB_DZ_14-main/docs/source/: conf.py  index.rst
WEB_DZ_14-main/migrations/versions/: d2e64a555112_add_verify.py
WEB_DZ_14-main/src/config/: config.py
WEB_DZ_14-main/src/entity/: models.py
WEB_DZ_14-main/src/repository/: contacts.py  users.py
WEB_DZ_14-main/src/routes/: auth.py  contacts_api.py  users.py
WEB_DZ_14-main/src/schemas/: contact_schemas.py  user.py
WEB_DZ_14-main/src/services/: auth.py  email.py  roles.py
WEB_DZ_14-main/src/services/templates/: confirmed_email.html
WEB_DZ_14-main/tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_repository_contacts.py  test_repository_users.py
WEB_DZ_9-main/: README.md  pyproject.toml
WEB_DZ_9-main/Beautiful Soup/: authors.json  models.py  quotes.json  scraping.py
WEB_DZ_9-main/Beautiful Soup_2/: authors.json  scraping_2.py
async_web_chat_API_privat_bank-main/: LICENSE  README.md  pyproject.toml
async_web_chat_API_privat_bank-main/app/: exchange.py  server.py
async_web_chat_API_privat_bank-main/app/front_end/: index.html  main.js
final core team project/: README.md  pyproject.toml  setup.py
final core team project/project_13/: main.py  sorter.py
final core team project/project_13/classes/: abclasses.py  notes.py  uiclasses.py
fix WEB_DZ_12-main/hw/: pyproject.toml
fix WEB_DZ_12-main/hw/migrations/versions/: 17801f0188e4_init.py
fix WEB_DZ_12-main/hw/src/database/: db.py
fix WEB_DZ_12-main/hw/src/entity/: models.py
fix WEB_DZ_12-main/hw/src/repository/: contacts.py
fix WEB_DZ_12-main/hw/src/routes/: contacts_api.py
fix WEB_DZ_12-main/hw/src/schemas/: contact_schemas.py  user.py
fix WEB_DZ_12-main/hw/src/services/: roles.py
html-main/: main.py
hwork1WEB/: BotAbstarct.py  __main__.py  logs.txt
hwork3web-main/: factorize.py  sorter.py
ml_module1/: Hw1.ipynb
ml_module10/: Hw10_p1.ipynb  Hw10_p2.ipynb
ml_module11/: Hw11.ipynb
ml_module12/: Hw12.ipynb
ml_module2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb
ml_module3/: Hw3.ipynb
ml_module4/: Hw4.ipynb
ml_module5/: Hw5.ipynb
ml_module6/: Hw6.ipynb
ml_module7/: Hw7.ipynb
ml_module8/: GoIT_HW_8_new.ipynb  Hw9.ipynb
nosql-main/: README.md  consumer.py  items.py  load_data.py  main.py  middlewares.py  pipelines.py  producer.py  quotes.py  (+1 more)
(+46 files in other folders)
