[tool.poetry]
name = "async-web-chat-api-privat-bank"
version = "0.1.0"
description = "Web chat built on a WebSocket with async API features"
authors = ["Sergii Pryima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"
names = "^0.3.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
