[tool.poetry]
name = "project_13"
version = "0.1.0"
description = ""
authors = ["Project_13 TEAM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
programmulinka = 'project_13.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
